# papr

./: .gitignore  .impeccable.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
extension/: README.md  manifest.json  package.json  popup.html  popup.js
extension/src/: background.js  content.js  detect.js
extension/test/: detect.test.js
scripts/: gen-tray-icon.mjs
src/: App.tsx  api.ts  i18n.ts  main.tsx  player.ts  store.ts  styles.css  toast.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: feed-directory.json
src-tauri/src/: ai.rs  commands.rs  db.rs  export.rs  lib.rs  main.rs  models.rs  notify.rs  readwise_reader.rs  share.rs  state.rs  sync.rs  tray.rs
src-tauri/src/ingestion/: discovery.rs  fetch.rs  mod.rs  newsletter.rs  parse.rs  scheduler.rs  sources.rs
src/components/: AddFeedDialog.tsx  ArticleList.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ErrorBoundary.tsx  ExploreDialog.tsx  HighlightLayer.tsx  Icon.tsx  PlayerBar.tsx  PromptDialog.tsx  Reader.tsx  SendToMenu.tsx  SettingsDialog.tsx  Sidebar.tsx  TagPicker.tsx
src/hooks/: articleActions.ts  useDismiss.ts
src/lib/: anchor.test.ts  anchor.ts  feedMeta.ts  highlightColors.ts  highlightDom.ts  markdown.ts  readwise.test.ts  readwise.ts  tagColors.ts
src/locales/: en.json  ja.json  zh.json
