[package]
name = "papr"
version = "0.1.1"
description = "Papr — a modern RSS reader"
authors = ["you"]
edition = "2021"

[lib]
name = "papr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-window-state = "2"
# Custom-scheme deep links (feature F6): the browser extension's
# "Subscribe in Papr" button opens a `papr://subscribe?url=…` link.
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# data layer
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"

# ingestion
feed-rs = "2"
reqwest = { version = "0.12", features = ["gzip", "brotli", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
ego-tree = "0.9"  # scraper's DOM tree type — walked directly for text extraction
url = "2"
opml = "1"

# email newsletter ingestion (F5): IMAP polling + RFC822 parsing.
# `imap` 3.x is pre-release; pinned exactly. `rustls-tls` avoids an OpenSSL
# system dependency, keeping the CI/build environment self-contained.
imap = { version = "=3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
mail-parser = "0.11"

# content
ammonia = "4.1.2"
dom_smoothie = "0.17"

# "Send to Kindle" delivers the article as an email attachment (feature F8).
# `rustls-tls` keeps the build self-contained (no system OpenSSL), matching the
# `imap` crate's TLS choice above. The blocking transport is enough — sends run
# on the Tokio blocking pool.
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }

# misc
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
log = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
